сделан простой парсер. начата работа над главной страницей

--- a/index.html
+++ b/index.html
@@ -1,9 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script src="js/jquery.js"></script>
+    <script src="js/bookCore.js"></script>
+    <link rel="stylesheet" href="css/bookStyle.css">
     <title></title>
 </head>
 <body>
-vsfdsf
+
+<div class="book">
+    <img  src="s/book.jpg" alt="JavaScript Programmer's Reference" style="display:block; height: 500px; width: 200px;" />
+    <h2>JavaScript Programmer's Reference</h2>
+    <h4>Cliff Wootton</h4>
+    <h4>Wrox Press Ltd.</h4>
+    <div>JavaScript Programmer's Reference</div>
+    <h3>About the Author</h3>
+    <div>Cliff Wootton lives in the south of England and works on multimedia systems and content management software for large data driven web sites. Currently he is developing interactive TV systems for BBC News Online in London ( http://www.bbc.co.uk/news ) and previously worked for other commercial broadcasters on their web sites. Before that he spent several years developing geophysical software and drawing maps with computers for oil companies.</div>
+    <div>Cliff is married with three daughters and a growing collection of bass guitars.</div>
+    <h3>Acknowledgements</h3>
+    <div>It's hard to believe I've actually reached the stage of writing the introductory pages to this book. It's been a long process and I don't think I would have reached this point without the help of Tim Briggs at Wrox, who very gently urged me onwards and gave me encouragement when I needed it.</div>
+
+    <h3>Acknowledgements</h3>
+    <div>It's hard to believe I've actually reached the stage of writing the introductory pages to this book. It's been a long process and I don't think I would have reached this point without the help of Tim Briggs at Wrox, who very gently urged me onwards and gave me encouragement when I needed it.</div>
+    <h3>Acknowledgements</h3>
+    <div>It's hard to believe I've actually reached the stage of writing the introductory pages to this book. It's been a long process and I don't think I would have reached this point without the help of Tim Briggs at Wrox, who very gently urged me onwards and gave me encouragement when I needed it.</div>
+    <h3>Acknowledgements</h3>
+    <div>It's hard to believe I've actually reached the stage of writing the introductory pages to this book. It's been a long process and I don't think I would have reached this point without the help of Tim Briggs at Wrox, who very gently urged me onwards and gave me encouragement when I needed it.</div>
+    <h3>Acknowledgements</h3>
+    <div>It's hard to believe I've actually reached the stage of writing the introductory pages to this book. It's been a long process and I don't think I would have reached this point without the help of Tim Briggs at Wrox, who very gently urged me onwards and gave me encouragement when I needed it.</div>
+    <h3>Acknowledgements</h3>
+    <div>It's hard to believe I've actually reached the stage of writing the introductory pages to this book. It's been a long process and I don't think I would have reached this point without the help of Tim Briggs at Wrox, who very gently urged me onwards and gave me encouragement when I needed it.</div>
+    <h3>Acknowledgements</h3>
+    <div>It's hard to believe I've actually reached the stage of writing the introductory pages to this book. It's been a long process and I don't think I would have reached this point without the help of Tim Briggs at Wrox, who very gently urged me onwards and gave me encouragement when I needed it.</div>
+    <h3>Acknowledgements</h3>
+    <div>It's hard to believe I've actually reached the stage of writing the introductory pages to this book. It's been a long process and I don't think I would have reached this point without the help of Tim Briggs at Wrox, who very gently urged me onwards and gave me encouragement when I needed it.</div>
+    <h3>Acknowledgements</h3>
+    <div>It's hard to believe I've actually reached the stage of writing the introductory pages to this book. It's been a long process and I don't think I would have reached this point without the help of Tim Briggs at Wrox, who very gently urged me onwards and gave me encouragement when I needed it.</div><h3>Acknowledgements</h3>
+    <div>It's hard to believe I've actually reached the stage of writing the introductory pages to this book. It's been a long process and I don't think I would have reached this point without the help of Tim Briggs at Wrox, who very gently urged me onwards and gave me encouragement when I needed it.</div>
+
+</div>
 </body>
 </html>
