--- a/index.html
+++ b/index.html
@@ -1,43 +1,178 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <script src="js/jquery.js"></script>
-    <script src="js/bookCore.js"></script>
-    <link rel="stylesheet" href="css/bookStyle.css">
-    <title></title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="shortcut icon" href="assets/img/favicon.png">
+
+    <title>FLATTY - Free Bootstrap 3 Landing Page</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="assets/css/main.css" rel="stylesheet">
+
+    <!-- Fonts from Google Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,900' rel='stylesheet' type='text/css'>
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
 </head>
+
 <body>
 
-<div class="book">
-    <img  src="s/book.jpg" alt="JavaScript Programmer's Reference" style="display:block; height: 500px; width: 200px;" />
-    <h2>JavaScript Programmer's Reference</h2>
-    <h4>Cliff Wootton</h4>
-    <h4>Wrox Press Ltd.</h4>
-    <div>JavaScript Programmer's Reference</div>
-    <h3>About the Author</h3>
-    <div>Cliff Wootton lives in the south of England and works on multimedia systems and content management software for large data driven web sites. Currently he is developing interactive TV systems for BBC News Online in London ( http://www.bbc.co.uk/news ) and previously worked for other commercial broadcasters on their web sites. Before that he spent several years developing geophysical software and drawing maps with computers for oil companies.</div>
-    <div>Cliff is married with three daughters and a growing collection of bass guitars.</div>
-    <h3>Acknowledgements</h3>
-    <div>It's hard to believe I've actually reached the stage of writing the introductory pages to this book. It's been a long process and I don't think I would have reached this point without the help of Tim Briggs at Wrox, who very gently urged me onwards and gave me encouragement when I needed it.</div>
-
-    <h3>Acknowledgements</h3>
-    <div>It's hard to believe I've actually reached the stage of writing the introductory pages to this book. It's been a long process and I don't think I would have reached this point without the help of Tim Briggs at Wrox, who very gently urged me onwards and gave me encouragement when I needed it.</div>
-    <h3>Acknowledgements</h3>
-    <div>It's hard to believe I've actually reached the stage of writing the introductory pages to this book. It's been a long process and I don't think I would have reached this point without the help of Tim Briggs at Wrox, who very gently urged me onwards and gave me encouragement when I needed it.</div>
-    <h3>Acknowledgements</h3>
-    <div>It's hard to believe I've actually reached the stage of writing the introductory pages to this book. It's been a long process and I don't think I would have reached this point without the help of Tim Briggs at Wrox, who very gently urged me onwards and gave me encouragement when I needed it.</div>
-    <h3>Acknowledgements</h3>
-    <div>It's hard to believe I've actually reached the stage of writing the introductory pages to this book. It's been a long process and I don't think I would have reached this point without the help of Tim Briggs at Wrox, who very gently urged me onwards and gave me encouragement when I needed it.</div>
-    <h3>Acknowledgements</h3>
-    <div>It's hard to believe I've actually reached the stage of writing the introductory pages to this book. It's been a long process and I don't think I would have reached this point without the help of Tim Briggs at Wrox, who very gently urged me onwards and gave me encouragement when I needed it.</div>
-    <h3>Acknowledgements</h3>
-    <div>It's hard to believe I've actually reached the stage of writing the introductory pages to this book. It's been a long process and I don't think I would have reached this point without the help of Tim Briggs at Wrox, who very gently urged me onwards and gave me encouragement when I needed it.</div>
-    <h3>Acknowledgements</h3>
-    <div>It's hard to believe I've actually reached the stage of writing the introductory pages to this book. It's been a long process and I don't think I would have reached this point without the help of Tim Briggs at Wrox, who very gently urged me onwards and gave me encouragement when I needed it.</div>
-    <h3>Acknowledgements</h3>
-    <div>It's hard to believe I've actually reached the stage of writing the introductory pages to this book. It's been a long process and I don't think I would have reached this point without the help of Tim Briggs at Wrox, who very gently urged me onwards and gave me encouragement when I needed it.</div><h3>Acknowledgements</h3>
-    <div>It's hard to believe I've actually reached the stage of writing the introductory pages to this book. It's been a long process and I don't think I would have reached this point without the help of Tim Briggs at Wrox, who very gently urged me onwards and gave me encouragement when I needed it.</div>
-
+<!-- Fixed navbar -->
+<div class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#"><b>CoupleBook</b></a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#"><3</a></li>
+            </ul>
+        </div><!--/.nav-collapse -->
+    </div>
 </div>
+
+<div id="headerwrap">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <h1>Запечатлите свою увлекательную переписку в живую книгу!</h1>
+                <form class="form-inline" role="form">
+                    <!--<div class="form-group">-->
+                        <!--<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email address">-->
+                    <!--</div>-->
+                    <button type="submit" class="btn btn-warning btn-lg">Начать!</button>
+                </form>
+            </div><!-- /col-lg-6 -->
+            <div class="col-lg-6">
+                <img class="img-responsive" style="width: 269px;" src="http://media-cache-ec0.pinimg.com/736x/66/e5/2d/66e52dbe1668f2a23eff3b6d533dcb74.jpg" alt="">
+            </div><!-- /col-lg-6 -->
+
+        </div><!-- /row -->
+    </div><!-- /container -->
+</div><!-- /headerwrap -->
+
+
+<div class="container">
+    <div class="row mt centered">
+        <div class="col-lg-6 col-lg-offset-3">
+            <h1>Your Landing Page<br/>Looks Wonderful Now.</h1>
+            <h3>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</h3>
+        </div>
+    </div><!-- /row -->
+
+    <div class="row mt centered">
+        <div class="col-lg-4">
+            <img src="assets/img/ser01.png" width="180" alt="">
+            <h4>1 - Browser Compatibility</h4>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+        </div><!--/col-lg-4 -->
+
+        <div class="col-lg-4">
+            <img src="assets/img/ser02.png" width="180" alt="">
+            <h4>2 - Email Campaigns</h4>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+
+        </div><!--/col-lg-4 -->
+
+        <div class="col-lg-4">
+            <img src="assets/img/ser03.png" width="180" alt="">
+            <h4>3 - Gather Your Notes</h4>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+
+        </div><!--/col-lg-4 -->
+    </div><!-- /row -->
+</div><!-- /container -->
+
+<div class="container">
+    <hr>
+    <div class="row centered">
+        <div class="col-lg-6 col-lg-offset-3">
+            <form class="form-inline" role="form">
+                <!--<div class="form-group">-->
+                    <!--<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email address">-->
+                <!--</div>-->
+                <button type="submit" class="btn btn-warning btn-lg">Сделать шикарный подарок!</button>
+            </form>
+        </div>
+        <div class="col-lg-3"></div>
+    </div><!-- /row -->
+    <hr>
+</div><!-- /container -->
+
+<div class="container">
+    <div class="row mt centered">
+        <div class="col-lg-6 col-lg-offset-3">
+            <h1>Flatty is for Everyone.</h1>
+            <h3>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</h3>
+        </div>
+    </div><!-- /row -->
+
+    <! -- CAROUSEL -->
+    <div class="row mt centered">
+        <div class="col-lg-6 col-lg-offset-3">
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                </ol>
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="assets/img/p01.png" alt="">
+                    </div>
+                    <div class="item">
+                        <img src="assets/img/p02.png" alt="">
+                    </div>
+                    <div class="item">
+                        <img src="assets/img/p03.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div><!-- /col-lg-8 -->
+    </div><!-- /row -->
+</div><! --/container -->
+
+<div class="container">
+    <hr>
+    <div class="row centered">
+        <div class="col-lg-6 col-lg-offset-3">
+            <form class="form-inline" role="form">
+                <!--<div class="form-group">-->
+                    <!--<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email address">-->
+                <!--</div>-->
+                <button type="submit" class="btn btn-warning btn-lg">Подарить своей половинке!</button>
+            </form>
+        </div>
+        <div class="col-lg-3"></div>
+    </div><!-- /row -->
+    <hr>
+    <p class="centered">Создано специально для поддержания любви в 2014 году <3</p>
+</div><!-- /container -->
+
+
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
 </body>
 </html>
