добавлены балуны + выбор типов страниц

--- a/vkGet.html
+++ b/vkGet.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <script type="text/javascript" src="vkget.js"></script>
     <title> fsdfds</title>
+    <link rel="stylesheet" href="css/vkmess.css">
+    <link rel="stylesheet" href="css/ballonmess.css">
 
+
+
+    <script type="text/javascript" src="js/jquery.js"></script>
 
 </head>
 <body>
@@ -11,8 +17,15 @@
 <select id="users">
 <option >Выбери</option>
 </select>
-<div id="messages"  ></div>
-<script type="text/javascript" src="js/jquery.js"></script>
+
+<input type="radio" name="view"  checked value="vk">VK
+<input type="radio" name="view" value="balloon" > Balloon
+
+<div id="messages" class="messages-wrapper">
+
+</div>
+
+
 
 </body>
 </html>
