запилена выборка имен пользователей. Изменен внешний вид. Добавлен лендинг

--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
         <div class="row">
             <div class="col-lg-6">
                 <h1>Запечатлите свою увлекательную переписку в живую книгу!</h1>
-                <form class="form-inline" role="form">
+
                     <!--<div class="form-group">-->
                         <!--<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email address">-->
                     <!--</div>-->
-                    <button type="submit" class="btn btn-warning btn-lg">Начать!</button>
-                </form>
+                    <a href="vkGet.html"> <button  class="btn btn-warning btn-lg">Начать!</button> </a>
+
             </div><!-- /col-lg-6 -->
-            <div class="col-lg-6">
-                <img class="img-responsive" style="width: 269px;" src="http://media-cache-ec0.pinimg.com/736x/66/e5/2d/66e52dbe1668f2a23eff3b6d533dcb74.jpg" alt="">
-            </div><!-- /col-lg-6 -->
+            <!--<div class="col-lg-6">-->
+                <!--<img class="img-responsive" style="width: 269px;" src="http://media-cache-ec0.pinimg.com/736x/66/e5/2d/66e52dbe1668f2a23eff3b6d533dcb74.jpg" alt="">-->
+            <!--</div>&lt;!&ndash; /col-lg-6 &ndash;&gt;-->
 
         </div><!-- /row -->
     </div><!-- /container -->
@@ -71,96 +71,96 @@
 <div class="container">
     <div class="row mt centered">
         <div class="col-lg-6 col-lg-offset-3">
-            <h1>Your Landing Page<br/>Looks Wonderful Now.</h1>
-            <h3>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</h3>
+            <h1>Ваша личная история любви<br/>Создайте книгу где главные герои это Вы и ваша вторая половинка!</h1>
+            <h3>Как же это работает?</h3>
         </div>
     </div><!-- /row -->
 
     <div class="row mt centered">
         <div class="col-lg-4">
-            <img src="assets/img/ser01.png" width="180" alt="">
-            <h4>1 - Browser Compatibility</h4>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-        </div><!--/col-lg-4 -->
-
-        <div class="col-lg-4">
-            <img src="assets/img/ser02.png" width="180" alt="">
-            <h4>2 - Email Campaigns</h4>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-
+            <img src="images/ser00.png" width="180" alt="">
+            <h4>1 - выберите откуда брать историю переписки</h4>
+            <p>Это удивительно просто! Импортируйте вашу историю переписки, из социальной сети ВКонтакте либо используйте функцию экспорта из приложения WhatsApp, установите промежуток времени который затрагивает ваши самые трогательные моменты.</p>
         </div><!--/col-lg-4 -->
 
         <div class="col-lg-4">
             <img src="assets/img/ser03.png" width="180" alt="">
-            <h4>3 - Gather Your Notes</h4>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+            <h4>2 - уникальный дизайн</h4>
+            <p>Используйте одну из предложенных нами обложек для книги и выберите оформление фона, либо используйте свои исходные файлы для того чтобы получить действительно единственный и уникальный дизайн для Вашей книги! Каждый дизайн создавался профессиональными дизайнерами с любовью!</p>
+
+        </div><!--/col-lg-4 -->
+
+        <div class="col-lg-4">
+            <img src="assets/img/ser02.png" width="180" alt="">
+            <h4>3 - получите книгу в ближайшем отделении почты</h4>
+            <p>Как только Вы решите, что ваша книга готова отправьте нам контактные данные, чтобы мы скорее отправили Ваш экземпляр книги! Книга придет к Вам по указанному адресу, Вам останется только забрать ее и обрадовать свою вторую половинку, шикарнейшим подарком!</p>
 
         </div><!--/col-lg-4 -->
     </div><!-- /row -->
 </div><!-- /container -->
 
+<!--<div class="container">-->
+    <!--<hr>-->
+    <!--<div class="row centered">-->
+        <!--<div class="col-lg-6 col-lg-offset-3">-->
+            <!--<form class="form-inline" role="form">-->
+                <!--&lt;!&ndash;<div class="form-group">&ndash;&gt;-->
+                    <!--&lt;!&ndash;<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email address">&ndash;&gt;-->
+                <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                <!--<button type="submit" class="btn btn-warning btn-lg">Сделать шикарный подарок!</button>-->
+            <!--</form>-->
+        <!--</div>-->
+        <!--<div class="col-lg-3"></div>-->
+    <!--</div>&lt;!&ndash; /row &ndash;&gt;-->
+    <!--<hr>-->
+<!--</div>&lt;!&ndash; /container &ndash;&gt;-->
+
+<!--<div class="container">-->
+    <!--<div class="row mt centered">-->
+        <!--<div class="col-lg-6 col-lg-offset-3">-->
+            <!--<h1>Flatty is for Everyone.</h1>-->
+            <!--<h3>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</h3>-->
+        <!--</div>-->
+    <!--</div>&lt;!&ndash; /row &ndash;&gt;-->
+
+    <!--<! -- CAROUSEL &ndash;&gt;-->
+    <!--<div class="row mt centered">-->
+        <!--<div class="col-lg-6 col-lg-offset-3">-->
+            <!--<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">-->
+                <!--&lt;!&ndash; Indicators &ndash;&gt;-->
+                <!--<ol class="carousel-indicators">-->
+                    <!--<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>-->
+                    <!--<li data-target="#carousel-example-generic" data-slide-to="1"></li>-->
+                    <!--<li data-target="#carousel-example-generic" data-slide-to="2"></li>-->
+                <!--</ol>-->
+
+                <!--&lt;!&ndash; Wrapper for slides &ndash;&gt;-->
+                <!--<div class="carousel-inner">-->
+                    <!--<div class="item active">-->
+                        <!--<img src="assets/img/p01.png" alt="">-->
+                    <!--</div>-->
+                    <!--<div class="item">-->
+                        <!--<img src="assets/img/p02.png" alt="">-->
+                    <!--</div>-->
+                    <!--<div class="item">-->
+                        <!--<img src="assets/img/p03.png" alt="">-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>&lt;!&ndash; /col-lg-8 &ndash;&gt;-->
+    <!--</div>&lt;!&ndash; /row &ndash;&gt;-->
+<!--</div><! --/container &ndash;&gt;-->
+
 <div class="container">
     <hr>
     <div class="row centered">
         <div class="col-lg-6 col-lg-offset-3">
-            <form class="form-inline" role="form">
+
                 <!--<div class="form-group">-->
                     <!--<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email address">-->
                 <!--</div>-->
-                <button type="submit" class="btn btn-warning btn-lg">Сделать шикарный подарок!</button>
-            </form>
-        </div>
-        <div class="col-lg-3"></div>
-    </div><!-- /row -->
-    <hr>
-</div><!-- /container -->
+                <A href="vkGet.html"><button class="btn btn-warning btn-lg">Подарить своей половинке!</button></A>
 
-<div class="container">
-    <div class="row mt centered">
-        <div class="col-lg-6 col-lg-offset-3">
-            <h1>Flatty is for Everyone.</h1>
-            <h3>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</h3>
-        </div>
-    </div><!-- /row -->
-
-    <! -- CAROUSEL -->
-    <div class="row mt centered">
-        <div class="col-lg-6 col-lg-offset-3">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
-                <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                </ol>
-
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img src="assets/img/p01.png" alt="">
-                    </div>
-                    <div class="item">
-                        <img src="assets/img/p02.png" alt="">
-                    </div>
-                    <div class="item">
-                        <img src="assets/img/p03.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </div><!-- /col-lg-8 -->
-    </div><!-- /row -->
-</div><! --/container -->
-
-<div class="container">
-    <hr>
-    <div class="row centered">
-        <div class="col-lg-6 col-lg-offset-3">
-            <form class="form-inline" role="form">
-                <!--<div class="form-group">-->
-                    <!--<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email address">-->
-                <!--</div>-->
-                <button type="submit" class="btn btn-warning btn-lg">Подарить своей половинке!</button>
-            </form>
         </div>
         <div class="col-lg-3"></div>
     </div><!-- /row -->
@@ -174,5 +174,8 @@
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
+
+
+
 </body>
 </html>
