--- a/vkGet.html
+++ b/vkGet.html
@@ -35,13 +35,13 @@
                 <h1>Выберите наиболее подходящую обложку <span>каждая обложка уникальна и создавалась с любовью</span>
                 </h1>
                 <nav class="codrops-demos">
-                    <a href="#" img='images/Cover1.png' imgPage='images/Background1-1.png' onclick="changeBg(this);">Обложка
+                    <a href="#" img='images/Cover1.png' imgPage='images/BG.png' onclick="changeBg(this);">Обложка
                         1</a>
-                    <a href="#" img='images/Cover2.png' imgPage='images/Background1.png' onclick="changeBg(this);">Обложка
+                    <a href="#" img='images/Cover2.png' imgPage='images/BG.png' onclick="changeBg(this);">Обложка
                         2</a>
-                    <a href="#" img='images/Cover3.png' imgPage='images/Background1.png' onclick="changeBg(this);">Обложка
+                    <a href="#" img='images/Cover3.png' imgPage='images/BG.png' onclick="changeBg(this);">Обложка
                         3</a>
-                    <a href="#" img='images/Cover4.png' imgPage='images/Background1.png' onclick="changeBg(this);">Обложка
+                    <a href="#" img='images/Cover4.png' imgPage='images/BG.png' onclick="changeBg(this);">Обложка
                         4</a>
                     <!--<a href="index5.html">Demo 5</a>-->
                 </nav>
@@ -356,7 +356,7 @@
 
                             <!-- Multiple Radios -->
                             <div class="form-group">
-                                <label class="col-md-4 control-label" for="radios">Multiple Radios</label>
+                                <label class="col-md-4 control-label" for="radios">Внешний видs</label>
 
                                 <div class="col-md-4">
                                     <div class="radio">
